--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.2",
     "sequelize": "^6.32.1",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "winston": "^3.10.0"
   },
   "scripts": {
     "start": "node src/server/index.js",
@@ -23,33 +24,36 @@
   "eslintConfig": {
     "extends": "airbnb-base",
     "env": {
-        "es6": true,
-        "browser": true
+      "es6": true,
+      "browser": true
     },
     "rules": {
-        "brace-style": [
-            "error",
-            "stroustrup"
-        ],
-        "comma-dangle": [
-            "error",
-            "never"
-        ],
-        "no-unused-vars": [
-            "warn"
-        ],
-        "no-var": [
-            "off"
-        ],
-        "one-var": [
-            "off"
-        ],
-        "import/prefer-default-export": [
-          "off"
-        ],
-        "import/extensions": [
-          "off"
-        ]
+      "brace-style": [
+        "error",
+        "stroustrup"
+      ],
+      "comma-dangle": [
+        "error",
+        "never"
+      ],
+      "no-unused-vars": [
+        "warn"
+      ],
+      "no-var": [
+        "off"
+      ],
+      "one-var": [
+        "off"
+      ],
+      "import/prefer-default-export": [
+        "off"
+      ],
+      "import/extensions": [
+        "off"
+      ],
+      "import/no-extraneous-dependencies": [
+        "off"
+      ]
     }
   }
 }
