refactor(errors): errors moved in one file, exported status codes constants

--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
       ],
       "import/no-extraneous-dependencies": [
         "off"
+      ],
+      "max-classes-per-file": [
+        "off"
       ]
     }
   }
