chore(postman): added postman collection, moved logger paths to env, updated models

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ DATABASE=postgres
 DB_HOST=localhost
 SECRET=supertopsecret
 ADMIN_PASSWORD=admin123
+ERROR_LOG_PATH=/Users/appstreams/Documents/User_Management/src/logs/error.log
+INFO_LOG_PATH=/Users/appstreams/Documents/User_Management/src/logs/info.log
