--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
       ],
       "max-classes-per-file": [
         "off"
+      ],
+      "class-methods-use-this": [
+        "off"
       ]
     }
   }
