--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.2",
     "sequelize": "^6.32.1",
+    "uuid": "^9.0.1",
     "validator": "^13.9.0",
     "winston": "^3.10.0"
   },
