--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "express": "^5.0.0-beta.1",
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.1",
     "pg": "^8.11.2",
+    "pm2": "^5.3.0",
     "sequelize": "^6.32.1",
     "uuid": "^9.0.1",
     "validator": "^13.9.0",
@@ -16,7 +18,8 @@
   },
   "scripts": {
     "start": "node src/server/index.js",
-    "lint": "eslint -c *.js"
+    "lint": "eslint -c *.js",
+    "dev": "nodemon src/server/index.js"
   },
   "devDependencies": {
     "eslint": "^8.48.0",
