--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "express": "^5.0.0-beta.1",
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
+    "mustache": "^4.2.0",
     "nodemon": "^3.0.1",
     "pg": "^8.11.2",
     "pm2": "^5.3.0",
+    "puppeteer": "^21.3.6",
     "sequelize": "^6.32.1",
     "uuid": "^9.0.1",
     "validator": "^13.9.0",
